Choix de la religion pour un personnage. Interface de gestion des groupes secondaires pour le chef du groupe. corrections de bugs. Amélioration de la présentation.

--- a/src/LarpManager/Views/forum/root.twig
+++ b/src/LarpManager/Views/forum/root.twig
@@ -9,7 +9,7 @@
 		<div class="col-xs-12 col-md-12">
 		
 			<ol class="breadcrumb">
-				<li>Navigation :</li>
+				<li><a href="{{ path('homepage') }}">Accueil</a></li>
 				<li class="active">Forum</li>
 			</ol>
 			<div class="panel">
