--- a/src/LarpManager/Views/personnage/competence.twig
+++ b/src/LarpManager/Views/personnage/competence.twig
@@ -1,33 +1,34 @@
 {% extends "layout.twig" %}
 
-{% block title %}{{ app.user.groupe.nom }}{% endblock title %}
+{% block title %}{{ personnage.nom }}{% endblock title %}
 
 {% block content %}
 
-<a href="{{ path('personnage.detail',{'index':personnage.id}) }}">Retour à votre personnage</a>
-<div class="well bs-component">
-	<form action="{{ path('personnage.competence.add',{'index':personnage.id}) }}" method="POST" {{ form_enctype(form) }}>
-		<fieldset>
-			<legend>{{ personnage.nom }} - <small>Achat d'une compétence</small></legend>
-			
-			<ul class="list-group">
-				<li class="list-group-item">Vous disposez de <strong>{{ personnage.xp }}</strong> Points d'expériences.</li>
-				<li class="list-group-item">Vos compétences favorites sont : {{ personnage.classe.competenceFamilyFavorites|join(', ') }}</li>
-				<li class="list-group-item">Vos compétences normales sont : {{ personnage.classe.competenceFamilyNormales|join(', ') }}</li>
-				<li class="list-group-item">Les autres compétences sont méconnue</li>
-			</ul> 
-	
-			{% form_theme form 'Form/bootstrap_3_layout.html.twig' %}
+<div class="container-fluid">
 
-			{{ form_row(form.competenceId) }}
-			{{ form_rest(form) }}
-		</fieldset>
-	</form>
+	<ol class="breadcrumb">
+		<li><a href="{{ path('homepage')  }}">Accueil</a></li>
+		<li class="active">Achat d'une compétence</li>
+	</ol>
+	
+	<div class="well bs-component">
+		<form action="{{ path('personnage.competence.add',{'index':personnage.id}) }}" method="POST" {{ form_enctype(form) }}>
+			<fieldset>
+				<legend>{{ personnage.nom }} - <small>Achat d'une compétence</small></legend>
+				
+				<ul class="list-group">
+					<li class="list-group-item">Vous disposez de <strong>{{ personnage.xp }}</strong> Points d'expériences.</li>
+					<li class="list-group-item">Vos compétences favorites sont : {{ personnage.classe.competenceFamilyFavorites|join(', ') }}</li>
+					<li class="list-group-item">Vos compétences normales sont : {{ personnage.classe.competenceFamilyNormales|join(', ') }}</li>
+					<li class="list-group-item">Les autres compétences sont méconnue</li>
+				</ul> 
+		
+				{% form_theme form 'Form/bootstrap_3_layout.html.twig' %}
+	
+				{{ form_row(form.competenceId) }}
+				{{ form_rest(form) }}
+			</fieldset>
+		</form>
+	</div>
 </div>
 {% endblock content %}
-
-{% block javascript %}
-
-{{ parent() }}
-
-{%  endblock javascript %}
