--- a/src/LarpManager/Views/forum/fragment/topic_list.twig
+++ b/src/LarpManager/Views/forum/fragment/topic_list.twig
@@ -18,6 +18,10 @@
 								Sous-forums : {{ topic.topics|join(', ') }} 
 							</p>
 						{% endif %}
+						{% if is_granted('ROLE_MODERATOR', app.user) %}
+							<a href="{{ path('forum.topic.update',{'index':topic.id}) }}">Modifier</a>
+						{% endif %}
+						
 					</div>
 					<div class="col-xs-1 col-md-1">
 						{# nombre de sujets #}
