--- a/src/LarpManager/Views/forum/post.twig
+++ b/src/LarpManager/Views/forum/post.twig
@@ -8,7 +8,7 @@
 		<div class="row">		
 			<div class="col-xs-12 col-md-12">
 				<ol class="breadcrumb">
-					<li>Navigation :</li>
+					<li><a href="{{ path('homepage') }}">Accueil</a></li>
 					<li><a href="{{ path('forum')  }}">Forum</a></li>
 					{% for ancestor in post.topic.ancestor %}
 						<li><a href="{{ path('forum.topic',{'index':ancestor.id})  }}">{{ ancestor.title }}</a></li>
