--- a/src/LarpManager/Views/groupe/personnage_add.twig
+++ b/src/LarpManager/Views/groupe/personnage_add.twig
@@ -1,13 +1,13 @@
 {% extends "layout.twig" %}
 
-{% block title %}{{ app.user.groupe.nom }}{% endblock title %}
+{% block title %}{{ groupe.nom }}{% endblock title %}
 
 {% block content %}
 
 <div class="well bs-component">	
-	<form action="{{ path('personnage.add') }}" method="POST" {{ form_enctype(form) }}>
+	<form action="{{ path('groupe.personnage.add', {'index': groupe.id}) }}" method="POST" {{ form_enctype(form) }}>
 		<fieldset>
-			<legend>{{ app.user.groupe.nom }} - <small>Création d'un personnage</small></legend>
+			<legend>{{ groupe.nom }} - <small>Création d'un personnage</small></legend>
 			{% form_theme form 'Form/bootstrap_3_layout.html.twig' %}
 
 			{{ form_row(form.nom) }}
