--- a/src/LarpManager/Views/homepage/fragment/groupe.twig
+++ b/src/LarpManager/Views/homepage/fragment/groupe.twig
@@ -1,17 +1,33 @@
+{# detail du groupe #}
+
 <div class="panel panel-default">
-	<div class="panel-heading">
-		{{ groupe.nom }}
-	</div>
+	<div class="panel-heading">{{ groupe.nom }}</div>
 	<div class="panel-body">
-		<p>Territoire : {{ groupe.territoire.nom }}</p>
-		<p>Composition : {{ groupe.personnages|length }} personages</p>
-   	</div>
-   	<ul class="list-group">
-   		<li class="list-group-item">
-   			{% if app.user.isResponsable(groupe) %}
-   				<a href="{{ path('groupe.gestion', {'index':groupe.id}) }}" class="btn btn-primary" role="button">Gérer</a>
-   			{%  endif %}
-   			<a href="{{ path('groupe.joueur', {'index':groupe.id}) }}" class="btn btn-primary" role="button">Détail</a>
-   		</li>
-	</ul>
+		<div class="list-group">
+		
+			<div class="list-group-item">
+				<h6 class="list-group-item-heading">Composition</h6>
+				
+				<p class="list-group-item-text"><strong>Responsable : </strong>{{ groupe.responsable.username }} / {{ groupe.responsable.email }}</p>
+				<p class="list-group-item-text"><strong>Scénariste : </strong>{{ groupe.scenariste.username }} / {{ groupe.scenariste.email }}</p>
+				<p class="list-group-item-text"><strong>Membre du groupe</strong>
+					<ul>
+					{% for joueur in  groupe.joueurs %}
+						<li>{{ joueur.user.username }} / {{ joueur.user.email }}</li>
+					{% endfor %}
+					</ul>
+				</p>
+			</div>
+			
+			<div class="list-group-item">
+				<h6 class="list-group-item-heading">Liens</h6>
+				<p class="list-group-item-text"><a href="{{ path('territoire.detail', {'index': groupe.territoire.id}) }}">{{ groupe.territoire.nom }}</a></p>
+				<p class="list-group-item-text"><a href="{{ path('forum.topic', {'index': groupe.topic.id}) }}">Forum</a></p>
+											
+				{% if not app.user.personnage %}
+					<p class="list-group-item-text"><a href="{{ path('groupe.personnage.add', {'index': groupe.id}) }}">Créer votre personnage</a></p>
+				{% endif %}
+			</div>
+		</div>
+	</div>
 </div>
