--- a/src/LarpManager/Views/homepage/fragment/groupe.twig
+++ b/src/LarpManager/Views/homepage/fragment/groupe.twig
@@ -8,8 +8,14 @@
 			<div class="list-group-item">
 				<h6 class="list-group-item-heading">Composition</h6>
 				
+				{% if groupe.responsable %}
 				<p class="list-group-item-text"><strong>Responsable : </strong>{{ groupe.responsable.username }} / {{ groupe.responsable.email }}</p>
+				{% endif %}
+				
+				{% if groupe.scenariste %}
 				<p class="list-group-item-text"><strong>Scénariste : </strong>{{ groupe.scenariste.username }} / {{ groupe.scenariste.email }}</p>
+				{% endif %}
+				
 				<p class="list-group-item-text"><strong>Membre du groupe</strong>
 					<ul>
 					{% for joueur in  groupe.joueurs %}
@@ -21,8 +27,14 @@
 			
 			<div class="list-group-item">
 				<h6 class="list-group-item-heading">Liens</h6>
+				
+				{% if groupe.territoire %}
 				<p class="list-group-item-text"><a href="{{ path('territoire.detail', {'index': groupe.territoire.id}) }}">{{ groupe.territoire.nom }}</a></p>
+				{% endif %}
+				
+				{% if groupe.topic %}
 				<p class="list-group-item-text"><a href="{{ path('forum.topic', {'index': groupe.topic.id}) }}">Forum</a></p>
+				{% endif %}
 											
 				{% if not app.user.personnage %}
 					<p class="list-group-item-text"><a href="{{ path('groupe.personnage.add', {'index': groupe.id}) }}">Créer votre personnage</a></p>
