--- a/src/LarpManager/Views/joueur/detail.twig
+++ b/src/LarpManager/Views/joueur/detail.twig
@@ -48,6 +48,11 @@
 						<p class="list-group-item-text">
 							Numéro d'adhérant à la FédéGn : {{ joueur.fedegn }}
 						</p>
+						<p class="list-group-item-text">
+							
+							Date de fin de validité de l'assurance FédéGN : {% if joueur.dateFinValiditeFedegn %}{{ joueur.dateFinValiditeFedegn|date('Y-m-d') }}{%else%}non spécifié{% endif %}
+							
+						</p>
 					</div>
 		    		
 		    		<div class="list-group-item">
