--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -88,6 +88,9 @@
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Joueur<span class="caret"></span></a>
 					<ul class="dropdown-menu">
 						<li><a href="{{ path('forum') }}">Forum</a></li>
+						{% if app.user.joueur %}
+							<li><a href="{{ path('joueur.detail', {'index':app.user.joueur.id}) }}">Mon état-civil</a></li>
+						{% endif %}
 						<li><a href="{{ path('competence') }}">Les compétences</a></li>
 						<li><a href="{{ path('classe') }}">Les classes</a></li>
 					</ul
