Chemin différents pour la liste des compétences et la liste des classes pour les joueurs et pour les orgas de manière à permettre aux orgas de voir ces vues comme un joueur.

--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -91,8 +91,8 @@
 						{% if app.user.joueur %}
 							<li><a href="{{ path('joueur.detail', {'index':app.user.joueur.id}) }}">Mon état-civil</a></li>
 						{% endif %}
-						<li><a href="{{ path('competence') }}">Les compétences</a></li>
-						<li><a href="{{ path('classe') }}">Les classes</a></li>
+						<li><a href="{{ path('competence.joueur') }}">Les compétences</a></li>
+						<li><a href="{{ path('classe.joueur') }}">Les classes</a></li>
 					</ul
 				</li>
 			{% endif %}
