vue orga d'un joueur

--- a/src/LarpManager/Views/joueur/detail_orga.twig
+++ b/src/LarpManager/Views/joueur/detail_orga.twig
@@ -11,7 +11,7 @@
 			<div class="panel panel-default">
 				<div class="panel-heading">
 					<h4 class="list-group-item-heading">
-						Votre état-civil
+						Etat-civil du joueur
 					</h4>
 				</div>
 				
@@ -62,19 +62,6 @@
 	  				</div>
 				</div>
 			</div>
-		</div>
-		<div class="col-xs-12 col-md-4">
-			<div class="panel panel-default">
-				<div class="panel-heading">
-					<h4 class="list-group-item-heading">
-						Informations
-					</h4>
-				</div>
-				<div class="panel-body">
-					<p>Texte pour expliquer aux joueurs en quoi il est important de mettre à jour leurs informations</p>
-					<p>Texte pour expliquer que l'on fait gaffe à la vie privée, et que ces informations ne seront jamais publié</p>
-				</div>
-			</div> 
 		</div>
 	</div>
 </div>
