Modification interface orga.

--- a/src/LarpManager/Views/homepage/orga.twig
+++ b/src/LarpManager/Views/homepage/orga.twig
@@ -16,7 +16,7 @@
 			
 			{{ include("homepage/fragment/find_joueur.twig",{
 					'form':findJoueurForm,
-					'action': path('joueur.search'),
+					'action': path('admin.joueur.search'),
 					'legend': 'Rechercher un joueur'}) }}
 					
 			{{ include("homepage/fragment/find_personnage.twig",{
