--- a/src/LarpManager/Views/user/list.twig
+++ b/src/LarpManager/Views/user/list.twig
@@ -4,46 +4,48 @@
 
 {% block content %}
 
-	<div class="page-header">    
-    	<h1>Liste des utilisateurs</h1>
-	</div>
+	<ol class="breadcrumb">
+		<li><a href="{{ path('homepage') }}">Accueil</a></li>
+		<li class="active">Liste des utilisateurs</li>
+	</ol>
 	
-    {% if paginator.totalItems == 1 %}
-        <strong>1</strong> utilisateur trouvé.
-    {% else %}
-        <strong>{{ paginator.totalItems }}</strong> utilisateurs trouvé.
-    {% endif %}
-
-    Montre <strong>{{ paginator.currentPageFirstItem }} - {{ paginator.currentPageLastItem }}</strong>.
-
-    {% for user in users %}
-
-        <div class="media">
-            <a class="media-object pull-left" href="{{ path('user.view', {'id': user.id}) }}">
-                <img src="{{ user.imageUrl }}" width="40" height="40" border=0>
-            </a>
-
-            <div class="media-body">
-                <h4 class="media-heading">
-                    <a href="{{ path('user.view', {'id': user.id}) }}">{{ user.displayName }}</a>
-                </h4>
-
-                {% if not user.isEnabled %}
-                    <div>
-                        <span class="label label-danger">Mail de confirmation en attente</span>
-                    </div>
-                {% endif %}
-
-                {% if is_granted('ROLE_ADMIN') %}
-                    <div class="text-muted">
-                        {{ user.email }}
-                    </div>
-                {% endif %}
-            </div>
-        </div>
-
-    {% endfor %}
-
-    {{ paginator|raw }}
-
+	<div class="well well-sm">
+	    {% if paginator.totalItems == 1 %}
+	        <strong>1</strong> utilisateur trouvé.
+	    {% else %}
+	        <strong>{{ paginator.totalItems }}</strong> utilisateurs trouvé.
+	    {% endif %}
+	
+	    Montre <strong>{{ paginator.currentPageFirstItem }} - {{ paginator.currentPageLastItem }}</strong>.
+	
+		<table class="table table-striped table-bordered">
+			<thead>
+				<tr>
+					<th>#</th>
+					<th>Username</th>
+					<th>Email</th>
+					<th>Etat-civil</th>
+					<th>Droits</th>
+				</tr>
+			</thead>
+			<tbody>
+	    	{% for user in users %}
+				<tr>
+					<td><a href="{{ path('user.edit',{'id':user.id}) }}">{{ user.id }}</a></td>
+					<td>{{ user.username }}</td>
+					<td>{{ user.email }}</td>
+					<td>{%  if not user.joueur %}Etat-civil non renseigné{% else %}<a href="{{ path('admin.joueur.detail', {'index':user.joueur.id}) }}">Voir l'état-civil</a>{% endif %}</td>
+					<td>{{ user.roles|join(', ') }}</td>
+					<td>
+					{% if user.joueur %}
+						<a href="{{ path('admin.joueur.xp', {'index': user.joueur.id}) }}">Points d'expériences</a>
+					{% endif %}
+					</td>
+				</tr>
+			{% endfor %}
+	    	</tbody>
+	    </table>
+	
+	    {{ paginator|raw }}
+	</div>
 {% endblock %}
