--- a/src/LarpManager/Views/admin/user/update.twig
+++ b/src/LarpManager/Views/admin/user/update.twig
@@ -10,6 +10,7 @@
     
 	<ol class="breadcrumb">
 		<li><a href="{{ path('homepage') }}">Accueil</a></li>
+		<li><a href="{{ path('user.list') }}">Liste des utilisateurs</a></li>
 		<li class="active">Modifier l'utilisateur : {{ user.displayName }}</li>
 	</ol>
 	
