--- a/src/LarpManager/Views/homepage/fragment/personnage.twig
+++ b/src/LarpManager/Views/homepage/fragment/personnage.twig
@@ -61,7 +61,7 @@
 						<p class="list-group-item-text">Votre candidature au groupe {{ postulant.secondaryGroup.label }} est en attente de validation.</p>
 					{% endfor %}
 				{% endif %}
-				<p class="list-group-item-text"><a href="{{ path('groupeSecondaire') }}">Liste des groupes secondaires</a></p>
+				<p class="list-group-item-text"><a href="{{ path('groupeSecondaire.list') }}">Liste des groupes secondaires</a></p>
 				
 			</div>
 		</div>
