--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -25,7 +25,7 @@
 						<li><a href="{{ path('gn.list') }}">Liste des grandeurs natures</a></li>
 						<li><a href="{{ path('user.list') }}">Liste des utilisateurs</a></li>
 						<li><a href="{{ path('groupe.list') }}">Liste des groupes</a></li>
-						<li><a href="{{ path('groupeSecondaire.list') }}">Liste des groupes secondaires</a></li>
+						<li><a href="{{ path('groupeSecondaire.admin.list') }}">Liste des groupes secondaires</a></li>
 						<li><a href="{{ path('personnage.list') }}">Liste des personnages</a></li>
 					</ul>
 				</li>
@@ -40,8 +40,6 @@
 						<li><a href="{{ path('territoire') }}">Territoires</a></li>
 						<li><a href="{{ path('langue') }}">Langues</a></li>
 						<li><a href="{{ path('groupe.list') }}">Groupes</a></li>
-						<li><a href="{{ path('groupeSecondaire.type') }}">Types de groupe</a></li>
-						<li><a href="{{ path('groupeSecondaire.list') }}">Groupe secondaires</a></li>
 						<li><a href="{{ path('ressource') }}">Ressources</a></li>
 						<li><a href="{{ path('religion') }}">Religions</a></li>
 						<li><a href="{{ path('religion.level') }}">Fanatisme</a></li>
