--- a/src/LarpManager/Views/homepage/fragment/groupe.twig
+++ b/src/LarpManager/Views/homepage/fragment/groupe.twig
@@ -18,8 +18,8 @@
 				
 				<p class="list-group-item-text"><strong>Membre du groupe</strong>
 					<ul>
-					{% for joueur in  groupe.joueurs %}
-						<li>{{ joueur.user.username }} / {{ joueur.user.email }}</li>
+					{% for participant in  groupe.participants %}
+						<li>{{ participant.user.username }} / {{ participant.user.email }}</li>
 					{% endfor %}
 					</ul>
 				</p>
@@ -36,7 +36,7 @@
 				<p class="list-group-item-text"><a href="{{ path('forum.topic', {'index': groupe.topic.id}) }}">Forum</a></p>
 				{% endif %}
 											
-				{% if not app.user.personnage %}
+				{% if not groupe.getPersonnage(app.user) %}
 					<p class="list-group-item-text"><a href="{{ path('groupe.personnage.add', {'index': groupe.id}) }}">Créer votre personnage</a></p>
 				{% endif %}
 			</div>
