--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -88,6 +88,7 @@
 						<li><a href="{{ path('forum') }}">Forum</a></li>
 						<li><a href="{{ path('competence.joueur') }}">Les compétences</a></li>
 						<li><a href="{{ path('classe.joueur') }}">Les classes</a></li>
+						<li><a href="{{ path('groupeSecondaire.list') }}">Les groupes secondaires</a></li>
 					</ul
 				</li>
 			{% endif %}
