--- a/src/LarpManager/Views/public/groupeSecondaire/postuler.twig
+++ b/src/LarpManager/Views/public/groupeSecondaire/postuler.twig
@@ -16,18 +16,20 @@
 		<ol class="breadcrumb">
 			<li>Navigation :</li>
 			<li><a href="{{ path('homepage')  }}">Accueil</a></li>
-			<li><a href="{{ path('groupeSecondaire')  }}">Groupes secondaires</a></li>
+			<li><a href="{{ path('groupeSecondaire.list')  }}">Groupes secondaires</a></li>
 			<li class="active">Postuler</li>
 		</ol>
 	
-		<div class="row">
-			<div class="col-xs-12 col-md-8">
-				{{ include("groupeSecondaire/fragment/form.twig",{
-					'legend': 'Postuler à ' ~ groupeSecondaire.label,
-					'action': path('groupeSecondaire.postuler', {'index': groupeSecondaire.id}), 
-					'form' : form}) }}
-			</div>
+		<div class="well bs-component">
+			<form action="{{ path('groupeSecondaire.postuler',{'index': groupeSecondaire.id}) }}" method="POST" {{ form_enctype(form) }}>
+				<fieldset>
+					<legend>Postuler à {{ groupeSecondaire.label}}</legend>
+						{% form_theme form 'Form/bootstrap_3_layout.html.twig' %}
+						{{ form(form) }}
+				</fieldset>
+			</form>
 		</div>
+
 	</div>
 
 {% endblock content %}
